# new_psh

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  Bugs-List  CMakeLists.txt  Doxyfile  Makefile  README.md  builtin_command.c  builtins.c  config.h.cm  config.h.in  configure.ac  exit.c  filpinfo.c  hash.c  hash.h  hasher.c  input.c  main.c  makefile  parser.c  parsing.c  preprocess.c  printargs  prompts.c  psh  psh.pc.in  pshell.c  pshell.h  read_command.c  run_backend.c  show.c  splitbuf.c  strncpy.c  test.c  token.h  util.c
.github/workflows/: codeql-analysis.yml
.theia/: settings.json  tasks.json
backends/: backend.h  posix.c
builtins/: Makefile  builtin.c  builtin.h  cd.c  echo.c  exec.c  exit.c  history.c  misc.c  pwd.c  true.c
cmake/: distclean.cmake  select_backend.cmake
include/: alias.h  args.h  backend.h  builtin.h  command.h  expansion.h  filpinfo.h  input.h  jobs.h  parser.h  prompts.h  psh.h  util.h  variable.h
include/libpsh/: hash.h  path_searcher.h  stringbuilder.h  util.h  xmalloc.h
lib/: CMakeLists.txt  Makefile.am  bench_hash.c  hash.c  hasher.c  path_searcher.c  stringbuilder.c  util.c  xmalloc.c
libpsh/: CMakeLists.txt  Makefile  bench_hash.c  hash.c  hash.h  hasher.c  libpsh.h  path_searcher.c  path_searcher.h  stringbuilder.c  stringbuilder.h  test_getstring.c  test_hash.c  test_path_searcher.c  test_stringbuilder.c  util.c  util.h  xmalloc.c  xmalloc.h
output/: main
psh/: CMakeLists.txt  Makefile  backend.h  builtin.h  builtins.c  command.c  command.h  filpinfo.c  filpinfo.h  hash.c  input.c  input.h  input2.c  main.c  main2.c  parser.c  prompts.c  prompts.h  psh.h  pshell.h  run_backend.c  select_backend.c  show.c  test_prompts.c  token.h  util.c  util.h  variable.c  variable.h
psh/backends/: backend.h  posix.c  posix2.c
psh/builtins/: builtin.c  builtin.h  cd.c  cd2.c  echo.c  exec.c  exit.c  history.c  misc.c  pwd.c  true.c
src/: CMakeLists.txt  Makefile.am  args.c  builtins.c  builtins2.c  command.c  expansion.c  filpinfo.c  input.c  jobs.c  main.c  main2.c  parser.c  prompts.c  util.c  variable.c
src/backends/posix/: CMakeLists.txt  posix.c
src/backends/posix2/: CMakeLists.txt  Makefile.am  builtin_exec.c  lifecycle.c  misc_impl.c  run.c
src/builtins/: alias.c  builtin.c  cd.c  echo.c  exec.c  exit.c  hash.c  help.c  history.c  pwd.c  true.c  unalias.c
test/: test_getstring.c  test_path_searcher.c  test_stringbuilder.c
util/: xmalloc.c
